--- a/src/Mainpage.module.css
+++ b/src/Mainpage.module.css
@@ -1,13 +1,13 @@
 * {
     padding: 0;
     margin: 0;
-background-color: #E5E5E5;
+    background-color: #E5E5E5;
 }
 
 .main_title {
     color: black;
     font-family: KOFIHDrLEEJWTTF-B;
-margin-left: 3%;
+    margin-left: 3%;
     margin-top: 3%;
 }
 
@@ -26,10 +26,13 @@ margin-left: 3%;
     font-style: normal;
 }
 
-img {
+.main_img {
     width: 1000px;
     height: 500px;
     display: block;
     margin: auto;
     margin-top: 150px;
+    max-width: 100%;
+    max-height: 50%;
+    object-fit: cover;
 }
