--- a/src/who/Haewon.module.css
+++ b/src/who/Haewon.module.css
@@ -1,7 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-font-family: KOFIHDrLEEJWTTF-B;
+* {
+    font-family: KOFIHDrLEEJWTTF-B;
 }
 
 @font-face {
@@ -11,21 +9,51 @@ font-family: KOFIHDrLEEJWTTF-B;
     font-style: normal;
 }
 
-.img_haewon{
-    width: 10px;
-}
-table{
-    border-right: 130px;
-    border-collapse: separate;
-    width: 500px;
-    text-align: center;
-    border:1px solid #282c34;
-    /*margin-top: 10px;*/
+.img_haewon {
+    max-width: 100%;
+    height: auto;
+
 }
 
-th,td{
-    border:1px solid #282c34;
+.table {
+    border-right: 130px;
+    border-collapse: separate;
+    width: 100%;
+    text-align: center;
+    border: 1px solid #282c34;
+    /*margin-top: 10px;*/
+    margin: auto;
 }
-button{
+
+.th, .td {
+    border: 1px solid #282c34;
+    padding: 10px;
+}
+
+.button {
+    border-spacing: 10px;
+    border-radius: 40%;
+    text-align: center;
+    font-size: 3rem;
     border: 0px;
+    width: 100px;
+    margin: 10px;
+}
+
+.nameplace {
+    margin-left: 3%;
+}
+
+.main_text p, h2 {
+    margin-left: 30px;
+    text-align: left;
+    line-height: 30px;
+    margin-right: 30px;
+}
+
+.wrap {
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+    /*margin-left: calc(375/-2)px;*/
 }
